// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test mode notification Returns empty div if not in test mode 1`] = `<div />`;

exports[`Test mode notification Returns empty div if not in test mode 2`] = `<div />`;

exports[`Test mode notification Returns empty div if not in test mode 3`] = `<div />`;

exports[`Test mode notification Returns empty div if not in test mode 4`] = `<div />`;

exports[`Test mode notification Returns empty div if not in test mode 5`] = `<div />`;

exports[`Test mode notification Returns empty div if not in test mode 6`] = `<div />`;

exports[`Test mode notification Returns empty div if not in test mode 7`] = `<div />`;

exports[`Test mode notification Returns valid component for deposits page 1`] = `
<div>
  <div
    class="wcpay-banner-notice is-warning"
  >
    <div
      class="wcpay-banner-notice__content"
    >
      Viewing test payouts. To view live payouts, disable test mode in 
      <a
        href="https://example.com/"
      >
        WooPayments settings
      </a>
      .
    </div>
  </div>
</div>
`;

exports[`Test mode notification Returns valid component for disputes page 1`] = `
<div>
  <div
    class="wcpay-banner-notice is-warning"
  >
    <div
      class="wcpay-banner-notice__content"
    >
      Viewing test disputes. To view live disputes, disable test mode in 
      <a
        href="https://example.com/"
      >
        WooPayments settings
      </a>
      .
    </div>
  </div>
</div>
`;

exports[`Test mode notification Returns valid component for documents page 1`] = `
<div>
  <div
    class="wcpay-banner-notice is-warning"
  >
    <div
      class="wcpay-banner-notice__content"
    >
      Viewing test documents. To view live documents, disable test mode in 
      <a
        href="https://example.com/"
      >
        WooPayments settings
      </a>
      .
    </div>
  </div>
</div>
`;

exports[`Test mode notification Returns valid component for loans page 1`] = `
<div>
  <div
    class="wcpay-banner-notice is-warning"
  >
    <div
      class="wcpay-banner-notice__content"
    >
      Viewing test loans. To view live loans, disable test mode in 
      <a
        href="https://example.com/"
      >
        WooPayments settings
      </a>
      .
    </div>
  </div>
</div>
`;

exports[`Test mode notification Returns valid component for overview page 1`] = `
.emotion-2 {
  width: 1em;
  height: 1em;
  margin: 0;
  vertical-align: middle;
  fill: currentColor;
}

<div>
  <div
    class="wcpay-banner-notice is-warning"
  >
    <div
      class="wcpay-banner-notice__content"
    >
      <strong>
        WooPayments is in test mode.
      </strong>
       All transactions will be simulated. 
      <a
        class="components-external-link"
        href="https://woocommerce.com/document/woopayments/testing-and-troubleshooting/sandbox-mode/"
        rel="external noreferrer noopener"
        target="_blank"
      >
        Learn more
        <span
          class="components-visually-hidden emotion-0 emotion-1"
          data-wp-c16t="true"
          data-wp-component="VisuallyHidden"
          style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
        >
          (opens in a new tab)
        </span>
        <svg
          aria-hidden="true"
          class="components-external-link__icon emotion-2 emotion-3"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Test mode notification Returns valid component for payments page 1`] = `
<div>
  <div
    class="wcpay-banner-notice is-warning"
  >
    <div
      class="wcpay-banner-notice__content"
    >
      Viewing test payments. To view live payments, disable test mode in 
      <a
        href="https://example.com/"
      >
        WooPayments settings
      </a>
      .
    </div>
  </div>
</div>
`;

exports[`Test mode notification Returns valid component for transactions page 1`] = `
<div>
  <div
    class="wcpay-banner-notice is-warning"
  >
    <div
      class="wcpay-banner-notice__content"
    >
      Viewing test transactions. To view live transactions, disable test mode in 
      <a
        href="https://example.com/"
      >
        WooPayments settings
      </a>
      .
    </div>
  </div>
</div>
`;
